[package]
name = "mcp23017-tp"
version = "0.1.0"
edition = "2021"
author = ["Thiago Palmieri <palmieri@adastra.aleeas.com>"]
keywords = ["analog", "driver", "i2c", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
description = "Rust Driver for device MCP23017 16-Bit I2C I/O Expander with Serial Interface"
readme = "README.md"
repository = "https://github.com/Thiapalm/mcp23017"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
byteorder = { version = "1.4.3", default-features = false }
rtt-target = "0.5"
maybe-async-cfg = "0.2.3"

[dev-dependencies]
pretty_assertions = "1"
embedded-hal-mock = "0.11.0"
float-cmp = "0.9.0"

[features]
default = []
chipmode = []
portmode = []
pinmode = []
async = ["dep:embedded-hal-async"]
